# imgui-desktop-base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
